fix: incrementar cobertura de tests y corregir code smells DeepSource
- DeepSource: lambda a method reference (Document::isActive), reducir
  complejidad cognitiva en CreateProjectInteractor, extraer constantes de
  estado en SaveProjectAdapter, return directo sin variable temporal
- ResearchCall: agregar build() al Builder que faltaba
- Tests nuevos/actualizados: AuditingAspectTest, SaveCallAdapterTest,
  SaveProjectAdapterTest, ProjectControllerTest, ProjectModuleTest
- Corregir 9 tests fallidos: mocks innecesarios, assertions incorrectas,
  roles equivocados en argument resolvers, ResearchCall null -> empty list
- 1089 tests, 0 failures